<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="673dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/welcome_to_scissors_rock_paper"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ChooseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_fate"
            android:textAlignment="center" />

        <Button
            android:id="@+id/PaperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="paperButtonClicked"
            android:text="@string/paper" />

        <Button
            android:id="@+id/ScissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scissorsButtonClicked"
            android:text="@string/scissors" />

        <Button
            android:id="@+id/RockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rockButtonClicked"
            android:text="@string/rock" />

        <TextView
            android:id="@+id/PScoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Player Score"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/CScoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Computer Score"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/PlayerWeaponView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_weapon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ComputerWeaponView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computer_s_weapon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/FunView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>